media/error_tc/error_269.txt
G:\SEM-7\ADF\FINAL PROJECT\AlgoBooth\media\source_codes/code_mK9YBzY.cpp: In function 'int main()':
G:\SEM-7\ADF\FINAL PROJECT\AlgoBooth\media\source_codes/code_mK9YBzY.cpp:8:1: error: expected ';' before '}' token
 }
 ^
